# iptview

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  README.md  iptview.desktop  vcpkg.json
resources/: iptview.rc
scripts/: build_linux.sh  build_linux_app.sh  build_windows.ps1  bump_version.sh
src/: CMakeLists.txt  abstractchanneltreeitem.cpp  abstractchanneltreeitem.h  channelsfilteringmodel.cpp  channelsfilteringmodel.h  channelsmodel.cpp  channelsmodel.h  channelswidget.cpp  channelswidget.h  channeltreeitem.cpp  channeltreeitem.h  database.cpp  database.h  databaseprovider.cpp  databaseprovider.h  epgwidget.cpp  epgwidget.h  favouritestreeitem.cpp  favouritestreeitem.h  grouptreeitem.cpp  grouptreeitem.h  iptviewmainwidget.cpp  iptviewmainwidget.h  iptviewmainwindow.cpp  iptviewmainwindow.h  loadingchanneliconsworker.cpp  loadingchanneliconsworker.h  loadingchannelsthread.cpp  loadingchannelsthread.h  loadxstreamchannelsworker.cpp  loadxstreamchannelsworker.h  m3ulist.cpp  m3ulist.h  m3uparser.cpp  m3uparser.h  m3uparsercontroller.cpp  m3uparsercontroller.h  main.cpp  manager_adaptor.xml  mediasegment.cpp  (+19 more)
src/shaders/: mpv.vsh  mpvFullScreenCircles.fsh  mpvWaitWheel.fsh
test/: CMakeLists.txt  TestM3UList.cpp  TestMediaSegment.cpp  testm3uparser.cpp
